data/derived/comb/progs/unify/prog4895.ml.out
Characters 195-196:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a -> 'b * 'c list -> 'b * 'a list
       but an expression was expected of type 'a -> 'b * 'c list -> 'a
       The type variable 'a occurs inside 'b * 'a list
